--- a/frontend/index.html
+++ b/frontend/index.html
@@ -347,6 +347,6 @@
       #snapshot... fields for profile summary
   -->
       <script src="script.js"></script>
-
+       <!--Comment comment  -->
 </body>
 </html>
