Dynamic user name 0.001 try

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -262,7 +262,7 @@
           <div class="db-profile-mini">
             <img src="https://placehold.co/48x48/ffffff/111111?text=U" alt="User Avatar" class="db-avatar">
             <div class="db-profile-info">
-              <span id="db-profile-name">Alex Doe</span>
+              <span id="db-profile-name">User</span>
               <span id="db-profile-status">Undergraduate Aspirant</span>
             </div>
           </div>
@@ -289,7 +289,7 @@
         <!-- top bar -->
         <div class="db-topbar">
           <div class="db-topbar-left">
-            <h2>Hello, <span id="db-user-firstname">Alex</span>!</h2>
+            <h2>Hello, <span id="db-user-firstname">User</span>!</h2>
           </div>
           <div class="db-topbar-right">
             <button class="db-icon-btn"><i class="ph ph-bell"></i></button>
